welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Boolean(false)
 required: Int
var vuBiscuit:Int=false
                  ^Program:4: error: Int does not take parameters
if (vuBiscuit() == true) {
             ^