welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit:Int=false
def haveBaggle():Boolean = {
if (vuBiscuit() == true) {
	return true;
}  else {
	return false
}
}
